--- a/wercker.yml
+++ b/wercker.yml
@@ -9,11 +9,12 @@ build:
       name: install terraform
       code: |
         mkdir -p $HOME/terraform
+        export TERRAFORM_VERSION=0.7.13
         export PATH=$PATH:$HOME/terraform
         cd $HOME/terraform
-        curl -sLO https://releases.hashicorp.com/terraform/0.7.13/terraform_0.7.13_linux_amd64.zip
-        unzip terraform_0.7.13_linux_amd64.zip
-        rm terraform_0.7.13_linux_amd64.zip
+        curl -sLO https://releases.hashicorp.com/terraform/0.7.13/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip
 
     - script:
       name: set working directory
@@ -33,6 +34,17 @@ build:
 
 deploy:
   steps:
+    - script:
+      name: install terraform
+      code: |
+        mkdir -p $HOME/terraform
+        export TERRAFORM_VERSION=0.7.13
+        export PATH=$PATH:$HOME/terraform
+        cd $HOME/terraform
+        curl -sLO https://releases.hashicorp.com/terraform/0.7.13/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+        rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip
+
     - script:
       name: terraform apply
       code: |
