--- a/wercker.yml
+++ b/wercker.yml
@@ -49,6 +49,12 @@ deploy:
         rm terraform_${TERRAFORM_VERSION}_linux_amd64.zip
 
     - script:
+      name: set working directory
+      code: |
+        export WERCKER_SOURCE_DIR=$WERCKER_SOURCE_DIR/terraform
+        echo "WERCKER_SOURCE_DIR=$WERCKER_SOURCE_DIR"
+
+    - script:
       name: terraform apply
       code: |
         terraform apply -var-file=variables.tfvars
