fix backend config

--- a/wercker.yml
+++ b/wercker.yml
@@ -22,14 +22,7 @@ build:
       command: plan
       var_file: variables.tfvars
       remote_config: |
-        -backend=gcs \
-        -backend-config='bucket=mocha-cloud-dns-tfstate' \
-        -backend-config='path=terraform.tfstate' \
-        -backend-config='project=mocha-cloud' \
-        -backend-config='credentials={ \
-          "private_key": "$GCP_PRIVATE_KEY", \
-          "client_email": "$GCP_CLIENT_EMAIL" \
-        }'
+        -backend-config='backend.config'
 
 deploy:
   steps:
