--- a/wercker.yml
+++ b/wercker.yml
@@ -18,7 +18,7 @@ build:
         }
         EOF
 
-    - ww24/terraform@0.9.11.1:
+    - ww24/terraform@0.9.12-test:
       command: plan
       var_file: variables.tfvars
       backend_config: backend.tf
