--- a/wercker.yml
+++ b/wercker.yml
@@ -18,7 +18,7 @@ build:
         }
         EOF
 
-    - ww24/terraform@0.10.9-test:
+    - ww24/terraform@0.11.3-rc.1:
       command: plan
       var_file: variables.tfvars
       backend_config: backend.config
