--- a/wercker.yml
+++ b/wercker.yml
@@ -8,19 +8,19 @@ build:
     - script:
       name: set working directory
       code: |
-        export WERCKER_SOURCE_DIR="$WERCKER_SOURCE_DIR/terraform"
-        echo "WERCKER_SOURCE_DIR=$WERCKER_SOURCE_DIR"
+        export WERCKER_SOURCE_DIR="${WERCKER_SOURCE_DIR}/terraform"
+        echo "WERCKER_SOURCE_DIR=${WERCKER_SOURCE_DIR}"
 
     - script:
       name: generate account.json
       code: |
         cat <<EOF > account.json
         {
-          "private_key": "$GCP_PRIVATE_KEY",
-          "client_email": "$GCP_CLIENT_EMAIL"
+          "private_key": "${GCP_PRIVATE_KEY}",
+          "client_email": "${GCP_CLIENT_EMAIL}"
         }
         EOF
-        export GOOGLE_APPLICATION_CREDENTIALS="${$WERCKER_SOURCE_DIR}/account.json"
+        export GOOGLE_APPLICATION_CREDENTIALS="${WERCKER_SOURCE_DIR}/account.json"
 
     - script:
       name: generate backend.tf
@@ -46,8 +46,8 @@ deploy:
     - script:
       name: set working directory
       code: |
-        export WERCKER_SOURCE_DIR="$WERCKER_SOURCE_DIR/terraform"
-        echo "WERCKER_SOURCE_DIR=$WERCKER_SOURCE_DIR"
+        export WERCKER_SOURCE_DIR="${WERCKER_SOURCE_DIR}/terraform"
+        echo "WERCKER_SOURCE_DIR=${WERCKER_SOURCE_DIR}"
 
     - ww24/terraform@0.11.3-rc.2:
       command: plan
