--- a/terraform/backend.tf.template
+++ b/terraform/backend.tf.template
@@ -1,5 +1,6 @@
 terraform {
   backend "gcs" {
+    account = "${ACCOUNT_JSON}"
     project = "${GCP_PROJECT_ID}"
     bucket = "${GCS_BUCKET_NAME}"
     prefix = "terraform"
